fix(FieldBlock): remove max label width when width stretch

--- a/packages/dnb-eufemia/src/extensions/forms/FieldBlock/style/dnb-field-block.scss
+++ b/packages/dnb-eufemia/src/extensions/forms/FieldBlock/style/dnb-field-block.scss
@@ -45,8 +45,8 @@ fieldset.dnb-forms-field-block {
   &--width {
     &-stretch {
       flex-grow: 1;
-      .dnb-forms-field-block__label.dnb-form-label {
-        max-width: auto;
+      label.dnb-form-label {
+        max-width: none;
       }
     }
     @include allAbove(x-small) {
